All_Component_DX/force-app/main/default/objects/SM_IB_Technical_Attributes__c/SM_IB_Technical_Attributes__c.object-meta.xml
<CustomObject>
    <description>Object to record current technical attributes as key value for an Installed Product.</description>
    <label>IB Technical Attribute</label>
    <nameField>
        <displayFormat>TA-{00000000}</displayFormat>
        <label>IB Technical Attribute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IB Technical Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>