All_Component_DX/force-app/main/default/objects/SM_IB_Technical_Attributes__c/fields/SM_Attr_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Attr_Name__c</fullName>
    <description>Records attribute name from JSON payload</description>
    <label>Attr Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>