All_Component_DX/force-app/main/default/objects/SM_IB_Technical_Attributes__c/fields/SM_Attr_Value__c.field-meta.xml
<CustomField>
    <fullName>SM_Attr_Value__c</fullName>
    <description>Records attribute value from JSON payload. If attribute value is more than 255 characters, trim to first 255 characters.</description>
    <label>Attr Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>