All_Component_DX/force-app/main/default/objects/SM_IB_Technical_Attributes__c/fields/SM_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Created_Date__c</fullName>
    <description>Date the attribute is created in mobile or online system</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>