All_Component_DX/force-app/main/default/objects/SM_IB_Technical_Attributes__c/fields/SM_IBAttr_ExtId__c.field-meta.xml
<CustomField>
    <fullName>SM_IBAttr_ExtId__c</fullName>
    <description>Uniqueness of the row is maintained by creating an external id with IB id and attribute name (a047000000NVVZYtemperature where a047000000NVVZY is the IB SFDC id and temperature is a technical attribute).</description>
    <externalId>true</externalId>
    <label>IB Attr ExtId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>