All_Component_DX/force-app/main/default/objects/SM_IB_Technical_Attributes__c/fields/SM_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SM_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate the attribute is active or inactive</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>