All_Component_DX/force-app/main/default/objects/SM_IB_Technical_Attributes__c/fields/SM_Number_Value__c.field-meta.xml
<CustomField>
    <fullName>SM_Number_Value__c</fullName>
    <description>Records attribute value from JSON payload if the attribute type is Number.</description>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>